--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                app:imageUrl="@{viewModel.imageResponse.url}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
