--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:contentDescription="@{viewModel.imageResponse.title}"
                 app:imageUrl="@{viewModel.imageResponse.url}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
@@ -40,7 +41,8 @@
                 android:textSize="20sp"
                 android:layout_gravity="bottom"
                 android:background="#55010613"
-                android:text="@string/image_of_the_day" />
+                android:text="@string/image_of_the_day"
+                android:contentDescription="@string/image_of_the_day"/>
         </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
