--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="standard_margin">16dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="subtext_size">16sp</dimen>
 </resources>
