--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -6,6 +6,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/text_size</item>
+        <item name="android:textColor">@color/default_text_color</item>
     </style>
 
+
+
+    <style name="TextAppearance.Subtext" parent="AppTheme">
+        <item name="android:textColor">@color/text_grey</item>
+        <item name="android:textSize">@dimen/subtext_size</item>
+    </style>
+
+    
 </resources>
